2008-03-11  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: |value| should be output in |dt| in Parse Errors
	section.

2008-02-24  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: Support for level-i (informational).

	* cc-style.css: New style rules for informational messages added.

	* error-description-source.xml (#information, #level-i): Added.

2008-02-10  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: In CSS mode, add 'u' error for 'structure' category (until
	it is actually implemented).  Support for '-moz-pre-wrap'.
	Typo in 'collapse' value fixed.

2008-02-10  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: |text/css| support.  |id_prefix| support was
	partially broken.

2008-02-10  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: Subdocument validation framework implemented.

2008-02-10  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi (print_listing_section): ID, class, and term
	section functions are merged.

2008-02-10  Wakaba  <wakaba@suika.fam.cx>

	* table-interface.en.html: Typo fixed.

	* cc.cgi: Use |$input->{id_prefix}| as the prefix for the
	identifiers in report sections.  Don't add headings
	if the |$input->{nested}| flag is set.

	* table-script.js (tableToCanvas): Now it aceepts third
	argument, |idPrefix|, for setting ID prefix.

	* table.cgi: Set the third argument to |tableToCanvas| as an
	empty string.

2008-02-10  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi (check_and_print): Now this is a subroutine.

2008-02-09  Wakaba  <wakaba@suika.fam.cx>

	* cc-style.css: Rules for s/unsupported/u/'ed version added.

	* cc.cgi: Support for 'u' level.

	* error-description-source.en.xml: s/unsupported/u/;

	* standards.en.html: CSS added.

2008-02-09  Wakaba  <wakaba@suika.fam.cx>

	* standards.en.html: New document.

	* cc-interface.en.html: Linking to |standards.en.html|.

2007-11-23  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: New error descriptions.

	* cc.cgi: |Accept-Encoding: *; q=0| is a request for server to send
	a 406 page!  |identity| encoding is added.
